# fantasy-bracket

./: .eslintrc.json  package-lock.json  package.json  postcss.config.js  pyproject.toml  tsconfig.eslint.json  tsconfig.json
data/: 2022_mm_draft.ipynb  2023-03-16-game-scoring-2023-ncaa-tournament.csv  2023-03-17-game-scoring-2023-ncaa-tournament-losers.csv  2023-03-17-game-scoring-2023-ncaa-tournament.csv  2023-03-18-game-scoring-2023-ncaa-tournament.csv  2023-03-19-game-scoring-2023-ncaa-tournament.csv  2023-03-24-game-scoring-2023-ncaa-tournament.csv  2023-03-25-game-scoring-2023-ncaa-tournament.csv  2023-04-01-game-scoring-2023-ncaa-tournament.csv  2023-04-03-game-scoring-2023-ncaa-tournament.csv  2023-kenpom-predictions-final.csv  2023_acc_tournament_players_stats.csv  2023_acc_tournament_players_stats_redux.csv  2023_ncaa_tournament_player_stats.csv  2023_ncaa_tournament_team_seeds.csv  2023_ncaa_tournament_team_stats.csv  2023_ncaa_tournament_teams_list.txt  draft.ipynb  game-schedule-2023-ncaa-tournament.xlsx  game-schedule-round-2-2023-ncaa-tournament.csv  game-schedule-round-3-2023-ncaa-tournament.csv  game-schedule-round-4-2023-ncaa-tournament.csv  game-schedule-round-5-2023-ncaa-tournament.csv  game-schedule-round-6-2023-ncaa-tournament.csv  game-schedule-round-7-2023-ncaa-tournament.csv  load-data.ipynb  record-games.ipynb  rounds-2023-acc-tournament.csv  rounds-2023-ncaa-tournament.csv  team_stats.csv  travis_auto_draft_rankings.csv
data/2023/: 2023-03-16-game-scoring-2023-ncaa-tournament-losers.csv  (+9 more)
src/: middleware.ts
supabase/: config.toml
(+116 files in other folders)
