[tool.poetry]
name = "fantasy-bracket"
version = "0.1.0"
description = ""
authors = ["Mitchell Brooks <MitchellBrooks@gmail.com>"]
readme = "README.md"
packages = [{include = "fantasy_bracket"}]

[tool.poetry.dependencies]
python = "^3.9"
supabase = "^1.0.2"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

